--- a/views/index-redesign.ejs
+++ b/views/index-redesign.ejs
@@ -342,7 +342,7 @@
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-md-offset-3 col-lg-offset-3 col-left">
           <span class="footer-link"><a href="#">Plan du site</a></span>
-          <span class="footer-link"><a href="index_redesign.html">Accueil</a> | <a href="mailto:damien.bunlet@isep.fr">Contact</a></span>
+          <span class="footer-link"><a href="/redesign">Accueil</a> | <a href="mailto:damien.bunlet@isep.fr">Contact</a></span>
           <span>redaction@cybermotard.com</span>
           <span>Textes et images par l'équipe de Cybermotard.com</span>
           <span>&copy; Copyright 1998 - 2019</span>
