--- a/views/index-lissajous.ejs
+++ b/views/index-lissajous.ejs
@@ -50,11 +50,11 @@
         </div>
         <div class="var">
           <h5>Choose your values from the previous equation :</h5>
-          <input id="a" type="number" name="a" value="" placeholder="a">
-          <input id="b" type="number" name="b" value="" placeholder="b">
-          <input id="p" type="number" name="p" value="" placeholder="p">
-          <input id="q" type="number" name="q" value="" placeholder="q">
-          <input id="angle" type="number" name="angle" value="" placeholder="&#945;" min="0" max="90">
+          <input id="a" type="number" name="a" value="" placeholder="a" title="This is input for 'a' parameter">
+          <input id="b" type="number" name="b" value="" placeholder="b" title="This is input for 'b' parameter">
+          <input id="p" type="number" name="p" value="" placeholder="p" title="This is input for 'p' parameter">
+          <input id="q" type="number" name="q" value="" placeholder="q" title="This is input for 'q' parameter">
+          <input id="angle" type="number" name="angle" value="" placeholder="&#945;" min="0" max="90" title="This is input for '&#945;' parameter">
         </div>
         <div class="error">
           <p id="alert-int" class="alert">All values must be given.</p>
